--- a/Android/src/app/src/main/res/values/themes.xml
+++ b/Android/src/app/src/main/res/values/themes.xml
@@ -19,6 +19,7 @@
     <style name="Theme.Gallery" parent="android:Theme.Material.Light.NoActionBar" />
     <style name="Theme.Gallery.SplashScreen" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">#2A2A34</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/Klypt Logo.png</item>
         <item name="postSplashScreenTheme">@style/Theme.Gallery</item>
     </style>
     <style name="Theme.Gallery.OssLicenses" parent="Theme.AppCompat.Light.DarkActionBar">
